syntax = "proto3";

option java_multiple_files = true;

package com.example.park;

message Vehicle {
  string vehicle_number = 1;
  string vehicle_type = 2;
}

message ParkRequest {
  Vehicle vehicle = 1;
}

message ParkResponse {
  string result = 1;
}

message ParkRequestManyTimes {
  Vehicle vehicle = 1;
}

message ParkResponseManyTimes {
  string result = 1;
}

service CarParkService {
  rpc parkVehicle(ParkRequest) returns (ParkResponse);
  rpc parkVehicleManyTimes(ParkRequestManyTimes) returns (stream ParkResponseManyTimes);
}